examples/fail/semantic/assert_requires_bool.bina
// EXPECT_SEMANTIC_ERROR: assert argument must be bool
fn main() -> int {
    assert(1);
    return 0;
}
